--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
       }
     ],
     "no-undef": "error",
-    "no-useless-escape": "off"
+    "no-useless-escape": "off",
+    "eqeqeq": ["error","always"]
   }
 }
